# fuzz/fuzz_targets/http_api.rs
@@ -14,8 +14,8 @@ use micro_http::Request;
 use vm_migration::MigratableError;
 use vmm::api::http::*;
 use vmm::api::{
-    ApiRequest, RequestHandler, VmInfoResponse, VmReceiveMigrationData, VmSendMigrationData,
-    VmmPingResponse,
+    ApiRequest, BalloonStatsResponse, RequestHandler, VmInfoResponse, VmReceiveMigrationData,
+    VmSendMigrationData, VmmPingResponse,
 };
 use vmm::config::RestoreConfig;
 use vmm::vm::{Error as VmError, VmState};
@@ -219,6 +219,14 @@ impl RequestHandler for StubApiRequestHandler {
             state: VmState::Running,
             memory_actual_size: 0,
             device_tree: None,
+        })
+    }
+
+    fn vm_balloon_stats(&self) -> Result<BalloonStatsResponse, VmError> {
+        Ok(BalloonStatsResponse {
+            balloon_actual: 0,
+            last_update: 0,
+            stats: Default::default(),
         })
     }
 
